--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":           "bahasa",
-  "description":    "Localization for node.js",
+  "description":    "Localization for node.js and express",
   "keywords":       ["localization", "i18n", "node.js", "coffee-script", "express"],
   "author":         "Sebastian E. Ferreyra Pons <sebastian@infomerx.com>",
   "version":        "0.0.0",
@@ -19,5 +19,11 @@
   },
   "bugs": {
     "url":            "https://github.com/infomerx/bahasa.js/issues"
+  },
+  "dependencies": {
+    "cookies":        "0.3.x",
+    "globalize":      "0.1.1",
+    "moment":         "2.0.0",
+    "geoip-lite":     "1.0.10"
   }
 }
